enigma_project/tests/error/frstnotreflecterr.inp
* I BETA III IV I AXLE